2009-08-26  Atsushi Enomoto  <atsushi@ximian.com>

	* SilverlightClientConfigLoader.cs : add (incomplete) binary
	  encoder support at config layer. see:
	  http://lists.ximian.com/pipermail/mono-list/2009-August/043245.html

2009-08-26  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerNode.cs : use ulong as same as Welcome message value.

2009-08-24  Atsushi Enomoto  <atsushi@ximian.com>

	* Constants.cs : p2p constants should rather go here.

2009-08-24  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntimeChannel.cs, DuplexClientRuntimeChannel.cs : split out
	  from former to latter and implemented most part of listener part.
	  Make sure to open internal channel at base ClientRuntimeChannel.
	* ClientProxyGenerator.cs : minimize !NET_2_1 to here.

2009-08-21  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : some refactoring to reduce weird limitation
	  to apply behaviors to endpoints. (no need to limit to [0]).

2009-08-21  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : some refactoring to isolate dispatcher
	  builder code from here.

2009-08-21  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : moved some code to channel/endpoint dispatcher
	  to reduce their dependencies on this type.

2009-08-20  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntimeChannel.cs : implement async OnBegin/EndOpen like close.
	  Add FIXME and OnOpen() override on duplex channel.

2009-08-20  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBase.cs : support UnknownMessageReceived (used by
	  ChannelDispatcher).

2009-08-20  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationContext.cs, OperationContextScope.cs :
	  implement IsUserContext.

2009-08-20  Atsushi Enomoto  <atsushi@ximian.com>

	* DuplexChannelFactory.cs, ChannelFactory_1.cs: with static factory
	  methods, they should close the factory when the channel is closed,
	  but nonstatic CreateChannel() could be called more than once, so
	  do not always close it.