@@ -1,3 +1,7 @@
+2009-09-01  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* ClientRuntimeChannel.cs : add Extensions.
+
 2009-08-26  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* SilverlightClientConfigLoader.cs : add (incomplete) binary
